--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,7 @@
 ---
-import A from "../components/header/A"
-import Input from "../components/comman/input.tsx"
 ---
-<div class="w-screen py-8 flex flex-col gap-8 bg-brandColor text-white ">
-<div class="flex max-sm:flex-col gap-8 justify-between w-full max-w-screen-xl px-8 sm:px-10">
+<div class="w-full rounded-t-2xl py-8 flex flex-col gap-8 bg-brandColor text-white ">
+<div class="flex max-sm:flex-col gap-8 justify-between w-full max-w-screen-xl px-8 sm:px-10 overflow-hidden">
     <p>Logo</p>
     <div class="flex max-sm:flex-col gap-8">
     <div class="flex flex-col gap-2">
