--- a/src/components/home/hajj.astro
+++ b/src/components/home/hajj.astro
@@ -5,12 +5,12 @@ import ShahiQilla from "../../assets/home/whereToGo/shahiqilla.jpg"
 import Inside from "../../assets/home/whereToGo/inside.jpg"
 ---
 
-     <a href="/hajj" class="group overflow-hidden relative grid grid-cols-2 gap-10 rounded-2xl bg-white border w-full p-5">
+     <a href="/hajj" class="group overflow-hidden relative grid lg:grid-cols-2 gap-10 rounded-2xl bg-white border w-full p-5">
       
-      <Image src={Makha} alt="Hajj" class="w-full h-full rounded-xl object-cover" />
+      <Image src={Makha} alt="Hajj" class="w-full h-full max-sm:order-2 rounded-xl object-cover" />
             <div class="flex flex-col gap-5 justify-center">
              <h3 class="text-3xl font-bold text-brandColor">Hajj Umrah</h3>
-             <p>Lorem iminus asperiores quo quod dignissimos delectus iusto corporis non harum ut labore rerum blanditiis impedit, fugit, sit vel. Saepe autem reiciendis itaque doloremque aperiam porro officiis, excepturi quos sint veniam, ratione exercitationem nemo iusto temporibus quasi vero odio eum deserunt consequatur rerum accusamus perspiciatis quas ipsum. Ducimus cum alias eveniet eos labore iusto, nisi aliquam quibusdam dicta sequi minima, accusantium numquam reprehenderit, illo expedita recusandae rerum quaerat dignissimos? Consequuntur, at?</p>
+             <p>Hajj sometimes also spelled Hadj, or Haj or Haji in English) is an annual Islamic pilgrimage to Mecca, Saudi Arabia, the holiest city for Muslims. Hajj is a mandatory religious duty for Muslims that must be carried out at least once in their lifetime by all adult Muslims who are physically and financially capable of undertaking the journey, and of supporting their family during their absence from home.</p>
             </div>
         
         <div class="absolute transition-all blur-md  duration-300 bg-black/50 w-full h-full left-full top-full group-hover:top-0 group-hover:left-0"></div>
