--- a/src/layout/MainLayout.astro
+++ b/src/layout/MainLayout.astro
@@ -4,7 +4,7 @@ interface Props {
 }
 import Header from '../components/header';
 import Footer from "../components/Footer.astro"
-const {title} = Astro.props as Props;
+const { title } = Astro.props as Props;
 ---
 
 <html lang="en">
@@ -15,9 +15,34 @@ const {title} = Astro.props as Props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col justify-center items-center gap-10 md:gap-20 bg-green-50 max-w-screen-2xl font-Satoshi w-full mx-auto px-3 bg-backgroundColo sm:px-5">
-		<!-- <Header client:load/> -->
+	<body class="flex  flex-col justify-center items-center gap-10 md:gap-20 bg-green-50 max-w-screen-2xl font-Satoshi w-full mx-auto px-3 bg-backgroundColo sm:px-5 overflow-hidden">
+		<Header client:load/>
 		<slot/>
 		<!-- <Footer/> -->
+		<!--Start of Tawk.to Script-->
+
+<script type="text/javascript">
+
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	
+	(function(){
+	
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	
+	s1.async=true;
+	
+	s1.src='https://embed.tawk.to/65caf1488d261e1b5f5f7444/1hmgbt1jc';
+	
+	s1.charset='UTF-8';
+	
+	s1.setAttribute('crossorigin','*');
+	
+	s0.parentNode.insertBefore(s1,s0);
+	
+	})();
+	
+	</script>
+	
+	<!--End of Tawk.to Script-->
 	</body>
 </html>
