--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
+import Footer from "../components/Footer.astro";
 import MainLayout from "../layout/MainLayout.astro";
 import HeroSection from "../components/home/HeroSection.astro"
 import Hajj from "../components/home/hajj.astro";
 import Tourism from "../components/home/Tourism.astro"
+import Header from "../components/header";
 ---
 
-<MainLayout title="Home">	
-		<!-- <HeroSection/> -->
-	    <!-- <Hajj/> -->
-		<!-- <Tourism/> -->
+<MainLayout title="Home" >	
+		
+	<HeroSection/>
+	    <Hajj/>
+		<Tourism/>
+		<Footer/>
 </MainLayout>
