--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,7 +4,7 @@ import MainLayout from "../layout/MainLayout.astro";
 import axios from 'axios';
 import type {Data} from "../assets/constants/interfaces"
 import type {Root} from "../assets/constants/interfaces"
-
+import Footer from "../components/Footer.astro";
 export async function getStaticPaths() {
   const api = "http://192.168.190.205:8000/agent/tours_list/";
   const blogs = "/api/blogs";
@@ -38,8 +38,17 @@ const { id,name,itinerary,inclusion,exclusion,description,thumbnail} = Astro.pro
 ---
 
  <MainLayout title={name}>
-    <div class="flex flex-col justify-center items-center">
- 
+    <div class="flex flex-col gap-6 justify-center items-start">
+    <img src={"http://192.168.190.205:8000"+thumbnail} class="w-full" />
+    <p class="text-3xl font-semibold text-brandColor">{name}</p>
+    <p class="text-xl">{description}</p>
+    <p class="text-3xl font-semibold text-brandColor">Itinerary</p>
+    <p class="text-xl">{itinerary}</p>
+    <p class="text-3xl font-semibold text-brandColor">Exclusion</p>
+    <p class="text-xl">{exclusion}</p>
+    <p class="text-3xl font-semibold text-brandColor">Inclusion</p>
+    <p class="text-xl">{inclusion}</p>
     </div>
-
+    
+<Footer/>
 </MainLayout>
