Hero Section and Hajj Section Added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import MainLayout from "../layout/MainLayout.astro";
+import HeroSection from "../components/home/HeroSection.astro"
+import Hajj from "../components/home/hajj.astro";
 ---
 
 <MainLayout title="Home">
-<h1>First</h1>
+	
+		
+		<!-- <HeroSection/> -->
+	    <!-- <Hajj/> -->
 </MainLayout>
