--- a/src/layout/MainLayout.astro
+++ b/src/layout/MainLayout.astro
@@ -2,6 +2,7 @@
 interface Props {
     title : string;
 }
+import Header from '../components/header';
 const {title} = Astro.props as Props;
 ---
 
@@ -13,7 +14,8 @@ const {title} = Astro.props as Props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="max-w-screen-2xl w-full mx-autoS">
+	<body class="flex pb-20 flex-col justify-center items-center gap-10 md:gap-20 bg-green-50 max-w-screen-2xl font-Satoshi w-full mx-auto px-3 bg-backgroundColo sm:px-5">
+		<Header client:load/>
 		<slot/>
 	</body>
 </html>
