footer and tourism

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import MainLayout from "../layout/MainLayout.astro";
 import HeroSection from "../components/home/HeroSection.astro"
 import Hajj from "../components/home/hajj.astro";
+import Tourism from "../components/home/Tourism.astro"
 ---
 
-<MainLayout title="Home">
-	
-		
+<MainLayout title="Home">	
 		<!-- <HeroSection/> -->
 	    <!-- <Hajj/> -->
+		<!-- <Tourism/> -->
 </MainLayout>
