--- a/src/layout/MainLayout.astro
+++ b/src/layout/MainLayout.astro
@@ -3,6 +3,7 @@ interface Props {
     title : string;
 }
 import Header from '../components/header';
+import Footer from "../components/Footer.astro"
 const {title} = Astro.props as Props;
 ---
 
@@ -14,8 +15,9 @@ const {title} = Astro.props as Props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="flex pb-20 flex-col justify-center items-center gap-10 md:gap-20 bg-green-50 max-w-screen-2xl font-Satoshi w-full mx-auto px-3 bg-backgroundColo sm:px-5">
-		<Header client:load/>
+	<body class="flex flex-col justify-center items-center gap-10 md:gap-20 bg-green-50 max-w-screen-2xl font-Satoshi w-full mx-auto px-3 bg-backgroundColo sm:px-5">
+		<!-- <Header client:load/> -->
 		<slot/>
+		<!-- <Footer/> -->
 	</body>
 </html>
