input section added

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import A from "../components/header/A"
+import Input from "../components/comman/input.tsx"
 ---
 <div class="w-screen py-8 flex flex-col gap-8 bg-brandColor text-white ">
 <div class="flex max-sm:flex-col gap-8 justify-between w-full max-w-screen-xl px-8 sm:px-10">
